--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react": "^16.3.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
+    "react-router": "^4.2.0",
     "react-scrollable-anchor": "^0.6.1",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.79.0",
